# spdatapickle

./: MANIFEST  Makefile  build.sh
spdatapickle/: CMakeLists.txt
spjson/: CMakeLists.txt  spjson.pc.in
spxml/: CMakeLists.txt  spxml.pc.in
